use java 22 feature getFirst on list